--- a/resume/2025_10_네이버페이.md
+++ b/resume/2025_10_네이버페이.md
@@ -1,37 +1,37 @@
-[네이버페이] 결제플랫폼 BE 개발
-모집 부서NAVER FINANCIAL 모집 분야Tech 모집 분야Backend 모집 경력경력 근로 조건정규모집 기간
-2025.09.30 ~ 2025.10.12 (23:59)
-Share Save
-지원하기
-조직 소개
+# 네이버페이 결제플랫폼 BE 개발
 
-네이버페이 결제형 BE 개발 조직은 네이버페이 온/오프라인 결제 서비스를 위한 플랫폼 & 서비스 BE개발을 담당합니다.
+- 모집 부서 : NAVER FINANCIAL
+- 모집 분야 : Tech
+- 모집 분야: Backend
+- 모집 경력 : 경력
+- 근로 조건 : 정규
+- 모집 기간 : 2025.09.30 ~ 2025.10.12 (23:59)
 
-결제 플랫폼 고도화 및 결제 서비스 확장을 통해 대한민국 1위 결제 플랫폼 & 서비스가 되기 위해 치열하게 경쟁하며, 이와 동시에 글로벌 환경에서 새로운 가치를 창출해내는 것을 목표로 합니다.
+## 조직 소개
 
+- 네이버페이 결제형 BE 개발 조직은 네이버페이 온/오프라인 결제 서비스를 위한 플랫폼 & 서비스 BE개발을 담당합니다.
 
+- 결제 플랫폼 고도화 및 결제 서비스 확장을 통해 대한민국 1위 결제 플랫폼 & 서비스가 되기 위해 치열하게 경쟁하며, 이와 동시에 글로벌 환경에서 새로운 가치를 창출해내는 것을 목표로 합니다.
 
-* 네이버페이의 일하는 문화가 궁금하다면, 현직자 인터뷰&블로그를 확인해보세요!
+- 네이버페이의 일하는 문화가 궁금하다면, 현직자 인터뷰&블로그를 확인해보세요!
 
+### ※ 네이버페이 인터뷰&블로그
 
+1. [네이버페이 개발자 센터](https://developers.pay.naver.com/)
 
-※ 네이버페이 인터뷰&블로그
+2. [현직자 인터뷰](https://recruit.naverfincorp.com/cnts/people)
 
-1. 네이버페이 개발자 센터 ▶ 바로가기
+3. [공식 블로그](https://blog.naver.com/naverfinancial)
 
-2. 현직자 인터뷰 ▶ 바로가기
+4. [기술 블로그](https://medium.com/naverfinancial)
 
-3. 공식 블로그 ▶ 바로가기
-
-4. 기술 블로그 ▶ 바로가기
-
-업무 내용
+## 업무 내용
 
 - 네이버페이 국내/국외 온라인 결제 or 현장결제 플랫폼 서비스 BE 개발 담당
 
 - 고성능/고가용성 플랫폼 구축 및 운영
 
-자격 요건
+## 자격 요건
 
 - 서비스 사용성에 대해 고민하고 의견을 낼 수 있는 분
 
@@ -43,16 +43,15 @@ Share Save
 
 - 분산 시스템의 트랜잭션에 대한 고민과 경험이 있으신 분
 
-우대사항
+## 우대사항
 
 - 대용량 서비스 경험 해보신 분
 
 - 능동적으로 서비스를 제안할 수 있는 분
 
-
 - 본인의 개발 스타일을 잘 표현할 수 있는 설계 & 자료 링크 첨부
 
-개발 환경
+## 개발 환경
 
 - 주요 기술 : Spring Boot, Nginx, Tomcat, Oracle, ElasticSearch, Redis, Kafka, Grafana 등
 
@@ -60,50 +59,38 @@ Share Save
 
 - 업무 도구 : Github Enterprise, IntelliJ, Confluence(wiki) 등
 
-전형 절차
+## 전형 절차
 
 서류전형 > 온라인 코딩테스트 > 기업문화 적합도 검사 > 1차면접 > 최종면접 (레퍼런스 체크)
 
-※ 필요에 따라 지원자 동의 하에 레퍼런스 체크가 진행 될 수 있습니다.
+- ※ 필요에 따라 지원자 동의 하에 레퍼런스 체크가 진행 될 수 있습니다.
 
-※ 전형절차는 직무별로 다르게 운영될 수 있으며, 일정 및 상황에 따라 변동될 수 있습니다.
+- ※ 전형절차는 직무별로 다르게 운영될 수 있으며, 일정 및 상황에 따라 변동될 수 있습니다.
 
-현직자 Comment
+## 현직자 Comment
 
-"외부 파트너사와 연결되는 혁신적인 결제 플랫폼을 개발해요"
+> <b>"외부 파트너사와 연결되는 혁신적인 결제 플랫폼을 개발해요"</b> <p>결제 시스템은 보수적인 접근이 요구되지만, 외부몰과 사용자를 쉽고 간결하게 연결하는 과정은 도전적이면서도 보람 있는 일입니다. 네이버페이의 Open API가 다양한 외부몰에서 원활히 활용될 수 있도록 안정적이고 확장성 높은 아키텍처를 설계하고 개선하는 과정에서 큰 성취감을 느낍니다.</p> <p>또한, 높은 트래픽에서도 안정적인 서비스를 제공하기 위해 지속적으로 아키텍처를 개선하며, 개발자로서 성장할 수 있는 환경이 잘 갖춰져 있다는 점도 큰 장점입니다. 기술적 도전을 즐기며 더 나은 결제 경험을 만들어가고 싶은 분이라면, 저희와 함께 의미 있는 성장을 경험할 수 있을 것입니다.</p>
 
-결제 시스템은 보수적인 접근이 요구되지만, 외부몰과 사용자를 쉽고 간결하게 연결하는 과정은 도전적이면서도 보람 있는 일입니다. 네이버페이의 Open API가 다양한 외부몰에서 원활히 활용될 수 있도록 안정적이고 확장성 높은 아키텍처를 설계하고 개선하는 과정에서 큰 성취감을 느낍니다.
+><b>"결제의 시작과 끝을 연결하는 조직"</b> <p>저희 조직은 외부몰에서 결제가 시작되는 지점부터 결제 코어 시스템과 연동하여 마지막 처리까지 전체 흐름을 책임지고 있습니다. 수많은 가맹점이 결제 서비스와 원활하게 연결될 수 있도록, 확장성과 안정성을 고려한 API 를 설계 및 개발합니다. 또한, 다양한 장애 위협에 신속하게 대응할 수 있도록 프로세스를 자동화하여 플랫폼의 신뢰성을 높이는 데 힘쓰고 있습니다. 실력 있는 동료들과 함께 빠르게 성장하는 결제 서비스를 안정적으로 제공하기 위한 고민을 나누며, 의미 있는 성장을 경험하고 싶은 분이라면 후회 없는 선택이 될 것입니다.</p>
 
-또한, 높은 트래픽에서도 안정적인 서비스를 제공하기 위해 지속적으로 아키텍처를 개선하며, 개발자로서 성장할 수 있는 환경이 잘 갖춰져 있다는 점도 큰 장점입니다. 기술적 도전을 즐기며 더 나은 결제 경험을 만들어가고 싶은 분이라면, 저희와 함께 의미 있는 성장을 경험할 수 있을 것입니다.
+## **필수** 기존 직장에서의 퇴직 사유와 네이버파이낸셜로의 지원 동기를 자유롭게 기재해주세요.
 
+- 최대 500자 이내로 작성해주세요.
+- 기존 직장에서의 퇴직 사유와 네이버파이낸셜로의 지원 동기를 자유롭게 기재해주세요.
 
+## **필수** 지금까지 수행한 과제 또는 프로젝트를 소개해주시고 본인의 역할을 함께 기술해주세요.
 
-"결제의 시작과 끝을 연결하는 조직"
+- 최대 1,000자 이내로 작성해주세요.
+- 지금까지 수행한 과제 또는 프로젝트를 소개해주시고 본인의 역할을 함께 기술해주세요.
 
-저희 조직은 외부몰에서 결제가 시작되는 지점부터 결제 코어 시스템과 연동하여 마지막 처리까지 전체 흐름을 책임지고 있습니다. 수많은 가맹점이 결제 서비스와 원활하게 연결될 수 있도록, 확장성과 안정성을 고려한 API 를 설계 및 개발합니다. 또한, 다양한 장애 위협에 신속하게 대응할 수 있도록 프로세스를 자동화하여 플랫폼의 신뢰성을 높이는 데 힘쓰고 있습니다. 실력 있는 동료들과 함께 빠르게 성장하는 결제 서비스를 안정적으로 제공하기 위한 고민을 나누며, 의미 있는 성장을 경험하고 싶은 분이라면 후회 없는 선택이 될 것입니다.
+## **선택** 경력 기술서 및 포트폴리오 등 추가 제출 희망하시는 자료가 있는 경우 첨부 부탁드립니다.
 
+- 채용과 무관한 개인정보(거주지 주소, 이메일, 휴대폰 번호, 결혼여부, 연봉정보 등)은 제외해주세요.
+- 공개가 어려운 대외비 자료 등은 제외해주세요.
 
+## **선택** 프로그래밍 과정에서 기술의 원리를 고민해본 경험이 있다면 말씀해주세요.
 
-[필수] 기존 직장에서의 퇴직 사유와 네이버파이낸셜로의 지원 동기를 자유롭게 기재해주세요.
-* 최대 500자 이내로 작성해주세요.
+- 최대 1,000자 이내로 작성해주세요.
+- 프로그래밍 과정에서 기술의 원리를 고민해본 경험이 있다면 말씀해주세요.
 
-기존 직장에서의 퇴직 사유와 네이버파이낸셜로의 지원 동기를 자유롭게 기재해주세요.
-내용을 입력해주세요.
-[필수] 지금까지 수행한 과제 또는 프로젝트를 소개해주시고 본인의 역할을 함께 기술해주세요.
-* 최대 1,000자 이내로 작성해주세요.
-
-지금까지 수행한 과제 또는 프로젝트를 소개해주시고 본인의 역할을 함께 기술해주세요.
-내용을 입력해주세요.
-[선택] 경력 기술서 및 포트폴리오 등 추가 제출 희망하시는 자료가 있는 경우 첨부 부탁드립니다.
-* 채용과 무관한 개인정보(거주지 주소, 이메일, 휴대폰 번호, 결혼여부, 연봉정보 등)은 제외해주세요.
-* 공개가 어려운 대외비 자료 등은 제외해주세요.
-첨부파일
-파일을 선택해주세요.
-
-찾아보기
-[선택] 프로그래밍 과정에서 기술의 원리를 고민해본 경험이 있다면 말씀해주세요.
-* 최대 1,000자 이내로 작성해주세요.
-
-프로그래밍 과정에서 기술의 원리를 고민해본 경험이 있다면 말씀해주세요.
-내용을 입력해주세요.
-[선택] 본인의 개발 스타일을 잘 표현할 수 있는 설계&자료 링크 첨부 해주세요.
+## **선택** 본인의 개발 스타일을 잘 표현할 수 있는 설계&자료 링크 첨부 해주세요.
