--- a/resume/2025_10_네이버페이.md
+++ b/resume/2025_10_네이버페이.md
@@ -78,10 +78,50 @@
 - 최대 500자 이내로 작성해주세요.
 - 기존 직장에서의 퇴직 사유와 네이버파이낸셜로의 지원 동기를 자유롭게 기재해주세요.
 
+저는 개발을 할 떄 재밌는 점이, 사람들이 실제로 사용하며, 사용하며 느낀 경험들을 듣고 부족한 부분을 빠르게 개선해나갈 수 있다는 점을 들고 싶습니다.
+아무래도 제 커리어상 그러한 경험을 많이 해보진 못했어서 항상 아쉬움을 느끼곤 했습니다.
+그럼에도 불구하고 현재 개발하는 슬롯게임의 어드민 툴을 개발할 떄에도 최대한 사용자의 의견을 들으려고 노력했으며, 1억 건의 데이터를 시뮬레이터 하는 기능의 에러를 수정하고 기능을 개선하고자하는 노력을 꾸준히 해왔습니다.
+이 기능을 위해 프로파일링을 수행하여 꾸준히 로직을 다듬어 왔으며, 이를 개선하기 위해 안전하게 리팩토링을하고자 테스트코드를 추가하는 노력을 기울였습니다.
+네이버페이와 같이 사용자들이 더욱 많은 서비스를 개발해보고자하는 욕심에, 이번이 좋은 기회라고 판단하여 지원하고자 합니다.
+
 ## **필수** 지금까지 수행한 과제 또는 프로젝트를 소개해주시고 본인의 역할을 함께 기술해주세요.
 
 - 최대 1,000자 이내로 작성해주세요.
 - 지금까지 수행한 과제 또는 프로젝트를 소개해주시고 본인의 역할을 함께 기술해주세요.
+
+[슬롯 게임 백엔드 개발]
+
+- 저는 NHN이라는 회사에서 소셜 카지노 게임인 페블시티 프로젝트에 참여하여 현재 슬롯 게임 백엔드를 개발하고 있습니다.
+- 현재는 슬롯 서버 파트의 파트장을 맡고있습니다.
+- 기술 스택은 Spring Boot 3, Java 17, Spring Cloud, MySQL, Redis 등의 기술 스택을 사용하고 있습니다.
+- 해당 프로젝트에서 제 역할은 슬롯 게임의 로직을 구현하고, 최근에는 상위 코드를 추상화하는데 노력을 기울이고 있으며, 안전하게 리팩토링할 수 있도록 테스트할 수 있는 환경도 개선하고 있습니다.
+
+아래에서 구체적으로 최근에 작업한 내용에대해 설명드리겠습니다
+
+[테스트환경 개선 및 꾸준한 리팩토링] - 제목을 더 관심을 사게 바꾸자..
+
+저는 이 프로젝트가 어느정도 진행된다음 참여했기 떄문에, 어느 정도 슬롯 게임의 기본적인 로직은 작성되어 있는 상태였습니다.
+승리 조건의 타입에 맞게 승리를 체크하는 것들이 주로 공통화 되어있었습니다.
+그런데 이는 아무도 내부동작을 아는 사람이 없었습니다. 
+따라서 저는 팀에 합류하여 새로운 로직을 개발하기도 하면서, 기존의 로직이 어떻게 동작하는지 이해할 필요가 있었습니다.
+그런데 이를 테스트하기란 꽤나 까다로운 형태로 개발되어있었습니다.
+이를 개선하기 위해서는 상위 단의 로직도 변경이 필요해보였습니다.
+이를 위해, 팀에 합류하고 슬롯 게임을 1개 왼성하고나서 부터는, 꾸준히 어떤식으로 변경하면 좋을지 구상을 하게 되었습니다.
+팀에서는 저 처럼 꾸준히 관심을 가지고 유지보수를 적극적으로 해주는 분이 없기도 했고, 제가 조금씩 변경을 하고 꾸준히 공유하는 방식이 이어져갔습니다.
+이를 유심히 지켜보시던 이사님께서 관심을 가지시고 저를 파트장으로 맡겨주셨습니다.
+현재는 각자 슬롯게임의 테스트를 쉽게 작성할 수 있는 환경도 갖춰져있으며, 더 나아가서는 로직들을 더 추상화하는 작업에 노력을 기울이고 있습니다.
+
+[적극적인 에러 해결 및 보완]
+
+저희는 현재 Observability에 대한 환경을 OpenTelemetry로 구축하고, Alert를 통해 에러 로그를 알림으로 받고 있습니다.
+이를 통해 에러를 선제적으로 발견하여 대응할 수 있는 환경은 구축되어 있는 상태입니다.
+그런데 슬롯 게임에서 자주 사용하는 기능인 시뮬레이터 기능에 대해서는 연결되어있지 않은 상태였고 기존의 다른 서비스를 참고하여 제가 연결을 진행해뒀습니다.
+이 때, OOM에러가 발생해서 애플리케이션이 종료된 것을 확인하고 에러해결에 나섰습니다.
+
+OOM이 발생한 원인을 추적하기 위해서, 힙덤프 파일을 파악하여 원인을 파악해보았다.
+문제점은 승리 금액에 대한 변동성을 계산하기 위해서, 시뮬레이션 동안 모든 승리 금액을 리스트 자료구조에 담고 있는 것이 문제였다.
+일상적으론 잘 발생하지 않았으나, 시뮬레이션을 동시에 많이 수행하게 되면 오류가 발생하고 있었다.
+이를 해결하기 위한 방법을 찾았고, 오차가 작으면서도 즉시 분산을 구할 수 있는 온라인 알고리즘으로 변경할 수 있도록 대응했다.
 
 ## **선택** 경력 기술서 및 포트폴리오 등 추가 제출 희망하시는 자료가 있는 경우 첨부 부탁드립니다.
 
