📝 Spring Batch : Listener 공부

--- a/java/spring-framework/batch/death-spring-batch/1.3-listener.md
+++ b/java/spring-framework/batch/death-spring-batch/1.3-listener.md
@@ -184,3 +184,59 @@ public interface ItemWriteListener<S> extends StepListener {
   - 예를 들어, Step 간에 데이터를 전달하거나, 다음 처리에 필요한 정보를 미리 준비할 수 있음
 - 부가 기능 분리
   - 예를 들어, 오류가 발생한 경우 메서드에서 관리자에게 알림 메일 보내는 등의 부가적인 일을 분리할 수 있음
+
+## 왜 JobParameters가 아닌 ExecutionContext를 사용할까?
+
+- 한 번 생성된 JobParameters는 변경할 수 없기 때문
+- Spring Batch의 핵심 철학 중 하나는 배치 작업의 **재현 가능성(Repeatability)과 일관성(Consistency)**을 보장하는 것
+
+<br />
+
+- 이를 위해 **JobParameters는 불변(immutable)하게 설계되었음**
+  - 재현 가능성 : 동일한 JobParameters로 실행한 Job은 항상 돌일한 결과를 생성해야 함
+    - 실행 중간에 JobParameters가 변경되면 이를 보장할 수 없음
+  - 추적 가능성 : 배치 작업의 실행 기록(JobInstance, JobExecution)과 JobParamteres는 메타데이터 저장소에 저장
+    - JobParamteres가 변경 가능하다면 기록과 실제 작업의 불일치가 발생할 수 있음
+- 따라서 Job 실행 중에 동적으로 생성되거나 변경되어야 하는 데이터는 ExecutionContext를 통해 관리하는 것이 좋음
+  - 주의할점은 JobParameters만으로 충분히 처리할 수 있는 경우에도 JobExecution으로 처리하는 경우가 있는데 이렇게는 하지 말자
+  - 예를 들어, 타겟 날짜를 JobExecution으로 관리해버리면, 재 처리가 불가능하다.
+  - 하드 코딩된 방식은 배치의 유연성을 떨어뜨리고, 필요한 순간에 원하는 데이터를 처리할 수 없게 만듬
+
+## ExecutionContextPromotionListener를 활용한 Step 간 데이터 공유
+
+- ExecutionContextPromotionListener는 Step 수준 ExecutionContext의 데이터를 Job 수준 ExecutionContext로 등록시켜주는 StepExecutionListener의 구현체
+
+```java
+@Bean
+public ExecutionContextPromotionListener promotionListener() {
+    ExecutionContextPromotionListener listener = new ExecutionContextPromotionListener();
+    listener.setKeys(new String[]{"data"});  // data 키를 승격 대상으로 지정
+    return listener;
+}
+```
+
+- 불가피한 경우가 아니라면 Step 간 데이터 의존성은 최소화하는 것이 좋다
+
+## Listener와 @JobScope, @StepScope 통합
+
+- 리스너와 Spring Batch Scope를 통합하면 리스너에서 잡 파라미터를 매우 쉽게 다룰 수 있음
+- 실행 시점에 결정되는 값들을 리스너내에서도 활용할 수 있다
+
+## Listener 마지막 훈련 : 성능과 모범 사례
+
+### 어떤 리스너를 선택해야 하는가?
+
+- JobExecutionListener : 전체 Job의 시작과 종료를 통제
+- StepExecutionListener : 각 Step의 단계 실행을 감시
+- ChunkListener : 시스템을 청크단위로 처리할 때, 반복의 시작과 종료 시점을 통제
+- Item[Read|Process|Write]Listener : 개별 아이템 식별 통제
+
+### 예외 처리는 신중하게
+
+- JobExecutionListener의 beforeJob()과 StepExecutionListener의 beforeStep()에서 예외가 발생하면 Job과 Ste이 실패한 것으로 판단 됨
+
+### 단일 책임 원칙 준수
+
+- 리스너는 감시와 통제만 담당
+- 실제 비즈니스 로직은 분리하자
+- 리스너가 너무 많은 로직을 담당하면 유지보수가 어려워짐
