📝 Spring Batch : 도입 추가

--- a/java/spring-framework/batch/death-spring-batch/2.2-flat-file-item-writer.md
+++ b/java/spring-framework/batch/death-spring-batch/2.2-flat-file-item-writer.md
@@ -35,6 +35,8 @@
 - **2단계 : LineAggregator(문자열 결합)**
   - FieldExtractor에서 추출한 데이터들을 하나의 문자열로 결합하는 역할
   - CSV 형식으로 결합할 수도 있고, 커스텀 형식으로 데이터를 포맷할 수도 있음
+    - DelimtedLineAggregator : 구분자 기반 형식으로 문자열 결합
+    - FormatterLineAggregator : 고정 길이 형식을 포함한 다른 형식으로 문자열 결합
 
 ## 동작 구조
 
@@ -101,3 +103,21 @@ ExtractorLineAggregator.aggregate(item)
            +--> FormatterLineAggregator
                    -> String.format(...)
 ```
+
+<br />
+
+- 지금까지는 객체 하나를 문자열로 바꾸는 법을 살펴봤다
+
+  - 하지만 ItemWriter의 write() 메서드는 단일 객체가 아닌 Chunk를 입력받는다는 것을 기억하자
+  - Chunk에는 여러 아이템이 들어있으니, FlatFileItemWriter는 각 아이템마다 이 과정을 반복한다
+
+  ```java
+  // FlatFileItemWriter.doWrite() -> write()에서 호출
+  public String doWrite(Chunk<? extends T> items) {
+    StringBuilder lines = new StringBuilder();
+    for (T item : items) {
+      lines.append(this.lineAggregator.aggregate(item)).append(this.lineSeparator);
+    }
+    return lines.toString();
+  }
+  ```
