📝 데이터베이스 설계 - 2장 개념적 모델링

--- a/database/김영한의-실전-데이터베이스-설계/2-개념적모델링.md
+++ b/database/김영한의-실전-데이터베이스-설계/2-개념적모델링.md
@@ -65,6 +65,8 @@
 예를 들어, '회원 주소'는 독립적인 정보 덩어리가 아니라 '회원'이라는 더 큰 정보 덩어리에 속한 일부다.
 따라서 '주소'는 속성이다.
 
+<br>
+
 ## 엔티티 분류
 
 '회원' 데이터와 '주문' 데이터는 성격이 다르다.
@@ -191,6 +193,8 @@
   - 각 데이터를 다른 데이터와 유일하게 구별해주는 이름표 역할을 한다.
   - 데이터베이스 테이블에서는 <b>기본 키(Primary Key)</b>가 된다.
 
+<br>
+
 ## 카디널리티와 참여도
 
 '회원'과 '주문' 사이에 관계가 생겼지만, "한 명의 회원이 여러 주문을 할 수 있는가?", <br>
@@ -220,3 +224,93 @@
 쉽게 얘기하면 개념적 모델링의 결과로 RDBMS 뿐만 아니라 NoSQL 같은 곳에도 사용할 수 있다.
 
 개념적 모델링 단꼐에서는 엔티티 간의 관계를 **관계선**으로 표현하며, 외래 키 같은 특정 기술의 구현적 요소는 포함하지 않는 것이 원칙이다.
+
+## ERD 완성하기
+
+- **피터 첸(Peter Chan) 표기법**
+  - 엔티티는 사각형, 관계는 마름모, 속성은 타원으로 표현하는 전통적인 방식이다.
+  - 속성까지 모두 표현되어 너무 복잡하다.
+  - 실용성이 떨어져 현재는 사용하지 않는다.
+- **까마귀발(Crow's Foot) 표기법**
+  - 현재 실무에서 가장 널리 사용되는 사실상의 표준이다.
+  - 왜 실무에서는 위 방식을 사용할까?
+    - 정보 밀도와 가독성: 적은 공간에 많은 정보를 깔끔하게 표현할 수 있다.
+    - 직관적인 표현: 기호 자체가 관계의 수량(카디널리티)를 직관적으로 보여준다.
+    - 대부분의 도구 지원: MySQL WorkBench, DBeaver, ERDCloud 등 대부분의 데이터베이스 모델링 도구가 지원한다.
+
+### 까마기발 표기법의 핵심 기호
+
+- 엔티티는 사각형 상자로 표현한다.
+- 관계는 두 엔티티를 잇는 직선으로 표현한다.
+- 선의 양 끝에 기호를 붙여 **카디널리티**와 **참여도**를 동시에 표현한다.
+  - `|` : 1 (One)
+  - `<` : 다 (Many, 까마귀발 모양)
+  - `0` : 0 (Zero)
+
+까마기발 표기법을 읽을 떄 가장 중요한 원칙은 **한 엔티티 쪽 끝에 있는 기호는 반대편 엔티티에 대한 규칙을 설명한다**는 것이다.
+
+<br>
+
+## 연관 엔티티 - 다대다 관계 해결 (M:N 관계의 두 가지 문제점과 해결책)
+
+### 문제 1 - M:N 관계는 물리적으로 구현할 수 없다.
+
+RDBMS는 테이블이라는 2차원 표 형태를 사용하며, 관계는 한 테이블의 **기본 키**를 다른 테이블의 **외래 키**로 포함시켜 표현한다.
+
+- 한 주문 행(레코드)에 여러 상품을 담을 수 없음
+  - 한 주문 행에 여러 컬럼을 만들어 상품을 담기 (X)
+  - 한 주문 행에 상품 ids 라는 컬럼을 만들어 List로 담기 (X)
+    - 하지 말자.
+      - 데이터 검색이 어려워진다
+      - 데이터 수정 및 삭제가 복잡해진다
+      - 원자성을 위반한다: 테이블의 모든 컬럼은 원자적인 값 하나만 가져야 한다.
+
+### 문제 2 - 관계에 속한 데이터를 저장할 장소가 없다
+
+- 주문한 상품의 가격을 저장하고 싶다면? (상품의 가격은 달라 질 수 있다)
+- 주문한 상품의 수량을 저장하고 싶다면?
+
+- 이 처럼 주문 수량과 주문 당시 가격은 주문이나 상품에 속한 속성이 아니다.
+- 이들은 **주문과 상품이 관계를 맺음으로써 발생하는 속성**이다.
+- **데이터를 관리하는 역할은 바로 엔티티의 몫이다**
+
+### 해결책 - 관계를 엔티티로 승격하자.
+
+해결하는 방법은 M:N 관계를 **연관 엔티티**로 바꾸는 것이다.
+
+- M:N 관계를 두 개의 1:N 관계로 분해하여 문제 1을 해결한다.
+- 새로운 엔티티에 관계 속성을 저장하여 문제 2를 해결한다.
+
+#### 연관 엔티티의 다양한 용어
+
+개념적 모델링 단계의 연관 엔티티는 논리/물리적 모델링 단계에서는 다양한 이름으로 불린다.
+
+- 연결 테이블 (Link Table)
+- 조인 테이블 (Join Table)
+- 매핑 테이블 (Mapping Table)
+
+다대다 관계를 해소하고 관계에 대한 추가 데이터를 저장하기 위해 두 개 이상의 테이블을 연결하는 중간 테이블이라는 의미만 잘 기억하자.
+
+## 용어 사전
+
+프로젝트의 모든 이해 관계자들은 같은 비즈니스 용어를 사용하는 것이 중요하다. <br>
+이 때 **용어 사전**을 만들어 관리해두면 유용하다.
+
+이렇게 잘 정리된 용어 사전은 단순한 명명 규칙을 넘어, 시스템의 구조와 비즈니스 로직을 이해하는 좋은 가이드가 된다.
+그리고 이렇게 만든 용어 사전은 앞으로 우리가 만들 모든 데이터베이스 객체와 애플리케이션 코드의 기준이 된다.
+
+### 단일어 중심 (Single Word)
+
+**가장 작은 단위의 단일어**를 중심으로 사전을 구성하는 것이 좋다.
+
+- `회원`: `member`
+- `상품`: `product`
+- `ID`: `id`
+- `가격`: `price`
+
+이제 우리는 이 단어들을 조립해서 일관된 용어를 만들어낼 수 있다.
+
+- 회원id = `member` + `id` = `member_id`
+- 상품 가격 = `product` + `price` = `product_price`
+
+이 방식은 다른 변형을 원천적으로 차단하고, 시스템 전체의 예측 가능성을 극대화한다.
