--- a/java/spring-framework/batch/death-spring-batch/0.1-introduce.md
+++ b/java/spring-framework/batch/death-spring-batch/0.1-introduce.md
@@ -1,13 +1,13 @@
-스프링 배치 레퍼런스 문서와, 강의를 통해 학습 후 Spring Batch의 기본 개념과 실전에 대해서 정리해보고자 합니다.
+# 스프링 배치를 공부하며
 
-<br>
+스프링 배치 레퍼런스 문서와, 강의를 통해 학습 후 Spring Batch의 기본 개념과 실전에 대해서 정리해보고자 합니다.
 
 - 2025.11.20 - Spring Batch 6이 출시되며 Spring Boot 4 버전과 완전하게 통합되었습니다.
   - 해당 문서는 Spring Batch 6은 다루지 않고 5버전을 다룰 예정입니다.
   - 레퍼런스 문서 : [https://docs.spring.io/spring-batch/reference/5.2/index.html](https://docs.spring.io/spring-batch/reference/5.2/index.html)
   - 참고한 강의 : [죽음의 스프링 배치](https://www.inflearn.com/course/%EC%A3%BD%EC%9D%8C%EC%9D%98-spring-batch)
 
-<br>
+</br>
 
 들어가기에 앞서서 배치란 무엇인지부터 살펴보자.
 
@@ -19,15 +19,11 @@
 
 이걸 사람이 직접 처리는 불가능하다. 그건 자살 행위나 다름없다.
 
-<br>
+</br>
 
 여기서 배치 처리가 등장한다. 정해진 시간이 되면 이 모든 작업이 자동으로 처리된다.
 
-<br>
-
 ### 배치 처리의 특징을 더 자세히 보자
-
-<br>
 
 - **대용량 데이터 처리**
   - 배치는 대량의 데이터를 효율적으로 처리한다.
@@ -49,11 +45,9 @@
   - CPU, 메모리, SSD... 이 모든 것을 신중하게 선택해야 한다.
   - 이러한 준비 과정을 거치면 시스템 다운은 없다.
 
-<br>
+</br>
 
 ### 실무 배치 사례들
-
-<br>
 
 - **일일 정산 배치**
   - 매일 밤 자정, 어김없이 실행된다.
@@ -75,104 +69,98 @@
   - 여러 데이터 저장소에서 데이터를 수집하여 하나의 일관된 데이터 싱태로 만드는 대규모 작업이다.
   - 이 과정은 데이터의 **정합성**을 유지하고, 다양한 서비스에서 **통합된 최신 데이터**를 활용할 수 있도록 한다.
 
-<br>
+</br>
 
-여기까지 왔다면, 배치 처리의 세계가 낯설고 다르다는 것을 느꼈을 것이다.
-
-보통 웹 애플리케이션 개발은 RESTful API를 만들고, 데이터베이스랑 통신하고, 사용자의 요청을 처리하는게 전부였다.
-
+여기까지 왔다면, 배치 처리의 세계가 낯설고 다르다는 것을 느꼈을 것이다. </br>
+보통 웹 애플리케이션 개발은 RESTful API를 만들고, 데이터베이스랑 통신하고, 사용자의 요청을 처리하는게 전부였다. </br>
 하지만 배치 처리는 다르다. 평소엔 보이지 않지만, 대규모의 데이터 처리와 자동화를 책임지며 시스템 전체를 움직인다.
 
 웹과 배치를 비교해보자.
 
-<br>
-
-## 웹 vs 배치 : 무엇이 다른가?
+## 웹 vs 배치: 무엇이 다른가?
 
 ### 실시간 vs 비대화식
 
-- 웹:
+- **웹**:
   - 사용자가 요청하면 즉각적으로 처리한다.
   - 클릭하거나 데이터를 입력하면, 그 순간 서버가 요청을 받아 JSON, HTML 등의 결과를 돌려준다.
   - 실시간 반응이 핵심이다.
-- 배치:
+- **배치**:
   - 배치는 사용자의 요청을 기다리지 않는다.
   - 정해진 스케줄에 따라 작업이 자동으로 실행된다.
   - 특정 시점에 대량 데이터를 처리하거나, 주기적으로 실행되는 작업에서 빛을 발한다.
 
 ### 결과의 속도
 
-- 웹:
+- **웹**:
   - 사용자의 요청에 즉각 응답하는 것이 생명이다.
   - 페이지 로딩이 1초만 느려져도 사용자는 떠난다.
   - 실시간 피드백이 가장 중요하다.
-- 배치:
+- **배치**:
   - 배치에서는 결과의 속도보다 **정확성**과 **완결성**이 우선이다.
   - 데이터 처리에 시간이 걸리더라도 대량 데이터를 완벽하게 처리하는 것이 목표다.
 
 ### 처리량의 차이
 
-- 웹:
+- **웹**:
   - 한 번에 한 사용자의 요청을 처리한다.
   - 한 명의 사용자가 상품을 검색하거나 주문을 할 떄, 그 요청만 처리하면 된다.
-- 배치:
+- **배치**:
   - 대량의 데이터를 효율적으로 처리한다.
   - 수백만 건의 데이터를 한 번에 처리하는 것이 기본이다.
 
 ### 오류 처리
 
-- 웹:
+- **웹**:
   - 잘못된 요청이 오면, 즉시 에러 코드를 반환하고 끝낸다.
   - 사용자에게 문제를 알리고, 서버는 다음 요청을 기다린다.
-- 배치:
+- **배치**:
   - 배치는 복구에 초점을 맞춘다.
   - 문제가 발생하면 재시도하고, 실패가 반복되면 중단한 뒤 로그와 알림으로 관리자를 호출한다.
   - 문제를 해결한 후 실패한 작업을 재시작하는 것이 일반적이다.
 
 ### 리소스 사용
 
-- 웹:
+- **웹**:
   - 서버는 상시 실행 중이다.
   - 사용자가 요청하지 않는 시간에도 대기 상태로 유지되며, 메모리와 CPU를 지속적으로 사용한다.
-- 배치:
+- **배치**:
   - 배치는 필요할 때만 실행된다.
   - 작업이 끝나면 리소스를 반환하고 종료된다.
 
-<br>
+### 두 셰계의 공존
+
+웹은 실시간 상호작용의 최전선에서 사용자와의 연결을 담당한다. </br>
+배치는 시스템의 후방에서 대규모 데이터 처리를 책임진다 </br>
+
+</br>
 
 ## 스프링 배치: 최강의 배치 처리 도구
 
-배치 처리의 중요성을 이해했다면, 이제 스프링 배치를 살펴보자.
-
-스프링 배치는 스프링 프레임워크를 기반으로 만들어진 배치 프레임워크다.
-
-우리에게 익숙한 스프링의 기술로 배치 처리의 일반적인 패턴을 손쉽게 구현할 수 있게 해준다.
+배치 처리의 중요성을 이해했다면, 이제 스프링 배치를 살펴보자. </br>
+스프링 배치는 스프링 프레임워크를 기반으로 만들어진 배치 프레임워크다. </br>
+우리에게 익숙한 스프링의 기술로 배치 처리의 일반적인 패턴을 손쉽게 구현할 수 있게 해준다. </br>
 
 그럼 이제 스프링 배치가 제공하는 핵심 기능들을 살펴보자.
 
-<br>
+</br>
 
 ### 유지보수성
-
-<br>
 
 웹 애플리케이션은 비즈니스 요구사항에 따라 자주 수정되지만, 배치 처리는 한번 정립된 업무 프로세스를 수행하기 때문에 상대적으로 변경이 적다.
 
 스프링은 이미 웹 개발에서 뛰어난 유지보수성을 입증했다. 스프링 배치는 이러한 스프링의 장점을 그대로 계승했다.
 
-<br>
-
 - <strong>의존성 주입(DI)</strong>으로 컴포넌트 간 결합도를 철저히 낮춘다. 코드 변경이 필요할 때 전체 시스템에 영향을 주지 않는다.
 - <strong>관점 지향 프로그래밍(AOP)</strong>으로 횡단 관심사를 완벽하게 분리한다. 코드의 모듈화가 극대화된다.
 - **스프링의 추상화 계층**이 특정 기술에 대한 종속성을 차단한다. 기술이 변해도 코드는 살아남는다.
 
-<br>
+</br>
 
-이에 더해 스프링 배치는 일반적인 배치 처리패턴을 추상화한 컴포넌트들을 제공한다.
-
+이에 더해 스프링 배치는 일반적인 배치 처리패턴을 추상화한 컴포넌트들을 제공한다. </br>
 웹과 비슷하게, 배치 처리에도 데이터를 읽고, 가공하고, 저장하는 일반적인 패턴이 있다.
 
-<br>
+</br>
 
 - **Job** : 하나의 완전한 배치 처리 작업
 - **Step** : Job의 세부 실행 단계 (하나의 Job은 여러 Step으로 구성될 수 있다)
@@ -180,21 +168,16 @@
 - **ItemProcessor** : 데이터를 가공하는 컴포넌트
 - **ItemWriter** : 데이터를 저장하는 컴포넌트
 
-<br>
+</br>
 
 이런 명확한 구조 덕분에 팀원들은 배치 코드를 쉽게 이해하고 유지보수 할 수 있다.
 
-<br>
+</br>
 
 ### 유연한 데이터 처리
 
-<br>
-
-배치 처리의 핵심은 다양한 데이터 소스를 다루는 것이다. 스프링 배치는 이를 손쉽게 할 수 있게 해준다.
-
+배치 처리의 핵심은 다양한 데이터 소스를 다루는 것이다. 스프링 배치는 이를 손쉽게 할 수 있게 해준다. </br>
 ItemReader와 ItemWriter라는 표준화된 인터페이스를 통해 어떤 데이터 소스든 일관된 방식으로 처리할 수 있다.
-
-<br>
 
 스프링 배치는 다음과 같은 다양한 데이터 소스를 기본적으로 지원한다.
 
@@ -204,19 +187,13 @@ ItemReader와 ItemWriter라는 표준화된 인터페이스를 통해 어떤 데
 - **NoSQL** : MongoDB, Redis 등을 위한 전용 Reader/Writer 제공
 - **메시징 시스템** : Kafka, AMQP 등 메시지 큐 시스템과의 연동 지원
 
-<br>
-
-여기서 가장 중요한 점은 이 모든 데이터 소스를 동일한 방식으로 다룰 수 있다는 것이다.
-
-파일에서 DB로, DB에서 NoSQL로 데이터를 옮기는 작업도 단순히 ItemReader와 ItemWriter 구현체만 교체하면 된다.
-
+여기서 가장 중요한 점은 이 모든 데이터 소스를 동일한 방식으로 다룰 수 있다는 것이다. </br>
+파일에서 DB로, DB에서 NoSQL로 데이터를 옮기는 작업도 단순히 ItemReader와 ItemWriter 구현체만 교체하면 된다. </br>
 이것이 스프링 배치가 제공하는 진정한 유연성이다.
 
-<br>
+</br>
 
 ### 견고한 트랜잭션 관리
-
-<br>
 
 스프링 배치는 다음과 같은 트랜잭션 관리 기능을 제공한다.
 
@@ -227,11 +204,9 @@ ItemReader와 ItemWriter라는 표준화된 인터페이스를 통해 어떤 데
   - 처리할 데이터 양과 특성에 따라 트랜잭션 범위 조절 가능
   - 작은 단위의 커밋으로 메모리 사용량 조절 가능
 
-<br>
+</br>
 
 ### 재시작 기능과 유연한 실행 제어
-
-<br>
 
 스프링 배치는 작업 실행을 세밀하게 제어할 수 있는 기능을 제공한다. 다음과 같은 핵심 기능들이 있다.
 
@@ -248,11 +223,11 @@ ItemReader와 ItemWriter라는 표준화된 인터페이스를 통해 어떤 데
 
 이러한 기능들 덕분에 복잡하고 장시간 실행되는 배치 작업도 안정적으로 관리하고 제어할 수 있다.
 
-<br>
+</br>
 
 ### 대용량 데이터 처리와 확장성
 
-<br>
+</br>
 
 스프링 배치는 대용량 데이터를 효율적으로 처리하면서도 다양한 규모의 작업에 유연하게 대응할 수 있다. 다음과 같은 핵심 기능들을 제공한다
 
@@ -269,11 +244,11 @@ ItemReader와 ItemWriter라는 표준화된 인터페이스를 통해 어떤 데
 
 이러한 특성들 덕분에 스프링 배치는 소규모 데이터 처리부터 대규모 엔터프라이즈급 배치 처리까지 다양한 규모의 데이터를 효율적으로 수행할 수 있다.
 
-<br>
+</br>
 
 ### 테스트 용이성
 
-<br>
+</br>
 
 스프링 배치는 배치 애플리케이션을 쉽게 테스트할 수 있는 다양한 도구들을 제공한다.
 
@@ -284,7 +259,4 @@ ItemReader와 ItemWriter라는 표준화된 인터페이스를 통해 어떤 데
   - 우리에게 익숙한 스프링의 테스트 도구들을 배치에서도 그대로 사용
   - 독립된 테스트 환경 제공
 - **단위 테스트**
-
   - 복잡한 배치 작업을 작은 단위로 나누어 테스트 가능
-
-    <br>
