🚚 Spring 폴더 depth 낮추기

--- a/java/spring-batch/0.1-introduce.md
+++ b/java/spring-batch/0.1-introduce.md
@@ -1,13 +1,4 @@
-# 스프링 배치를 공부하며
-
-스프링 배치 레퍼런스 문서와, 강의를 통해 학습 후 Spring Batch의 기본 개념과 실전에 대해서 정리해보고자 합니다.
-
-- 2025.11.20 - Spring Batch 6이 출시되며 Spring Boot 4 버전과 완전하게 통합되었습니다.
-  - 해당 문서는 Spring Batch 6은 다루지 않고 5버전을 다룰 예정입니다.
-  - 레퍼런스 문서 : [https://docs.spring.io/spring-batch/reference/5.2/index.html](https://docs.spring.io/spring-batch/reference/5.2/index.html)
-  - 참고한 강의 : [죽음의 스프링 배치](https://www.inflearn.com/course/%EC%A3%BD%EC%9D%8C%EC%9D%98-spring-batch)
-
-</br>
+# 죽음의 스프링 배치
 
 들어가기에 앞서서 배치란 무엇인지부터 살펴보자.
 
