📝 DB 설계 : 3장 개념적 모델링 실습

--- a/database/김영한의-실전-데이터베이스-설계/2-개념적모델링.md
+++ b/database/김영한의-실전-데이터베이스-설계/2-개념적모델링.md
@@ -4,7 +4,7 @@
 
 기술적인 용어 대신, 모두가 이해할 수 있는 그림과 용어로 소통하며 생각의 차이를 줄이고, 우리가 만들어야 할 것의 본질을 명확히 하는 중요한 단계이다.
 
-<br>
+</br>
 
 ## 요구사항 분석과 핵심 요소 식별
 
@@ -16,7 +16,7 @@
 - 명사 : 우리가 관리해야할 데이터의 대상. 즉 엔티티(Entity)또는 그 엔티티가 가지는 속성(Attribute)이 될 확률이 높다.
 - 동사 : 데이터들 사이의 행위나 관계, 즉 관계(Relationship)가 될 확률이 높다.
 
-<br>
+</br>
 
 ### 핵심 데이터 덩어리, 엔티티(Entity) 도출하기
 
@@ -31,7 +31,7 @@
   - `회원`과 `주문` 사이에 관계가 있다. (누가 주문했는가?)
   - `주문`과 `상품` 사이에 관계가 있댜. (무엇을 주문했는가?)
 
-<br>
+</br>
 
 ## 엔티티란?
 
@@ -39,7 +39,7 @@
 
 조금 더 구체적으로는 '저장할 만한 가치가 있는 정보를 여러 개 가지고 있으면서, 다른 것과 명확히 구분되는 유무형의 모든 것'을 말한다.
 
-엔티티는 우리가 만들 데이터베이스의 가장 핵심적인 뼈대(테이블)이 된다. <br>
+엔티티는 우리가 만들 데이터베이스의 가장 핵심적인 뼈대(테이블)이 된다. </br>
 좋은 엔티티는 다음과 같은 특징을 가진다.
 
 - **1. 업무 관련성 (Business Relevance)**
