--- a/java/spring-batch/4.3-fault-tolerant.md
+++ b/java/spring-batch/4.3-fault-tolerant.md
@@ -557,3 +557,43 @@ Spring Batch에서는 이렇게 불필요한 재처리를 방지하기 위해 `p
 
 - **ItemWriter에서 예외 발생 시, ItemProcessor 부터 처리가 재개된다.**
 - **ItemProcessor에서와 달리, ItemWriter에서의 재시도 횟수는 청크 단위로 관리된다.**
+
+ItemWriter는 아이템을 하나씩 쓰지 않고 청크 단위로 한 번에 쓴다. </br>
+즉, **청크 레벨에서 쓰기를 다시 수행해야 한다.**
+
+위의 예제를 다음과 같이 수정해보자.
+
+```java
+
+@Bean
+public ItemProcessor<Scream, Scream> terminationRetryProcessor() {
+    return scream -> {
+        System.out.print("[ItemProcessor]: 처형 대상 = " + scream + "\n");
+        return scream;
+    };
+}
+
+@Bean
+public ItemWriter<Scream> terminationRetryWriter() {
+    return new ItemWriter<>() {
+        private static final int MAX_PATIENCE = 2;
+        private int mercy = 0;  // 자비 카운트
+
+        @Override
+        public void write(Chunk<? extends Scream> screams) {
+            System.out.println("[ItemWriter]: 기록 시작. 처형된 아이템들 = " + screams);
+
+            for (Scream scream : screams) {
+                if (scream.getId() == 3 && mercy < MAX_PATIENCE) {
+                    mercy ++;
+                    System.out.println("[ItemWriter]: ❌ 기록 실패. 저항하는 아이템 발견 = " + scream);
+                    throw new TerminationFailedException("기록 거부자 = " + scream);
+                }
+                System.out.println("[ItemWriter]: ✅ 기록 완료. 처형된 아이템 = " + scream);
+            }
+        }
+    };
+}
+```
+
+이번에는 **ItemWriter에서 예외를 발생시킨다.**
